# rbw-pinentry

./: Cargo.toml  README.md
src/: main.rs  pinentry.rs
