[package]
name = "rbw-pinentry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
notify-rust = "4.14.0"
percent-encoding = "2.3.2"
regex = "1.12.3"
rpassword = "7.4.0"

