[package]
name = "rbw-pinentry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
lazy-regex = "3.6.0"
notify-rust = "4.14.0"
percent-encoding = "2.3.2"
rpassword = "7.4.0"

