[package]
name = "rbw-pinentry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
keyring-core = "1.0.0"
lazy-regex = "3.6.0"
notify-rust = "4.14.0"
percent-encoding = "2.3.2"
rpassword = "7.4.0"
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
zbus-secret-service-keyring-store = "1.0.0"

